--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
 
 <body>
     <header>
-        <div class="container">
-            <h2 class="logo">NETFLIX</h2>
-            <nav>
-                <a href="#">Início</a>
-                <a href="#">Séries</a>
-                <a href="#">Filmes</a>
-                <a href="#">Documentários</a>
-            </nav>
+        <h2 class="logo">NETFLIX</h2>
+        <nav>
+            <a href="#">Início</a>
+            <a href="#">Séries</a>
+            <a href="#">Filmes</a>
+            <a href="#">Bombando</a>
+            <a href="#">Minha lista</a>
+        </nav>
+        <div class="div-icones">
+            <i class="fas fa-search" id="icon-search"></i>
+            <i class="fas fa-bell" id="icon-bell"></i>
+            <i class="fas fa-user-circle" id="icon-profile"></i>
+            <i class="fas fa-sort-down" id="icon-arrow"></i>
         </div>
     </header>
 
@@ -34,13 +39,13 @@
                 <h3 class="titulo">VIKINGS</h3>
                 <p class="descricao">Um guerreiro viking busca a provação do líder de sua comunidade na abertura dessa série que narra as aventuras medievais de um grupo de nórdicos.</p>
                 <div class="botoes">
-                    <button role="button" class="botao">
+                    <button role="button" class="botao" id="btn-assistir">
                         <i class="fas fa-play"></i>
-                        ASSISTIR AGORA
+                        Assistir
                     </button>
-                    <button role="button" class="botao">
+                    <button role="button" class="botao" id="btn-info">
                         <i class="fas fa-info-circle"></i>
-                        MAIS INFORMAÇÕES
+                        Mais informações
                     </button>
                 </div>
             </div>
